# Django_vod_blog

./: db.sqlite3  pyproject.toml
blog/: admin.py  cb_views.py  fbv_urls.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author.py  0003_alter_blog_category.py  0004_comment.py  0005_alter_comment_options.py  0006_blog_image.py  0007_blog_thumbnail.py
config/: settings.py  urls.py
member/: views.py
templates/: base.html  blog_create.html  blog_detail.html  blog_form.html  blog_list.html  blog_update.html  form-js.html  pagination.html
templates/registration/: signup.html
